Fix dropdown visibiilty

--- a/clientapp/src/views/AppStyles.module.css
+++ b/clientapp/src/views/AppStyles.module.css
@@ -150,21 +150,21 @@ body {
     left: 100px;
     top: 20px;
     background: white;
-    z-index: 10;
+    z-index: 1;
     opacity: .5;
     position:fixed;
 }
 
 .settingsIcon {
     position: absolute;
-    z-index: 3;
+    z-index: 1;
     width: 10px;
     height: 10px;
 }
 
 .closeButton {
     position: absolute;
-    z-index: 3;
+    z-index: 1;
     width: 10px;
     height: 10px; 
     right: 15px;
@@ -172,14 +172,14 @@ body {
 
 .pageSettingsControl {
     position: absolute;
-    z-index: 3;
+    z-index: 2;
     padding: 10px;
 
     background: rgb(255, 255, 255);
-    width: 500px;
-    height: 500px;
-    left: 40px;
-    top: 40px;
+    width: 300px;
+    height: 100px;
+    right: 40px;
+    top: 10px;
     border: 2px solid black;
     box-shadow: 5px 5px 25px #00000080;
 }
@@ -233,7 +233,7 @@ body {
     position:absolute; 
     top:0; 
     right: 0;
-    z-index: 2;
+    z-index: 1;
     margin-top: -10px;
 }
 .widgetFrame .ConfigButton:hover {
